--- a/src/Slipka/appsettings.json
+++ b/src/Slipka/appsettings.json
@@ -1,4 +1,12 @@
 ﻿{
+  "MongoConnection": {
+    "ConnectionString": "mongodb://db",
+    "Database": "SlipkaDb"
+  },
+  "ProxySettings": {
+    "FirstPort": 61010,
+    "LastPort": 61020
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -10,11 +18,6 @@
       "LogLevel": {
         "Default": "Warning"
       }
-    },
-
-    "ProxySettings": {
-      "FirstPort": 5000,
-      "LastPort": 6000
     }
   }
 }
