--- a/src/Slipka/Properties/launchSettings.json
+++ b/src/Slipka/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "Slipka": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "graphql",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
