--- a/LegacyTest/packages.config
+++ b/LegacyTest/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GraphQL.Client" version="1.0.3" targetFramework="net461" />
+  <package id="GraphQL.Common" version="1.0.3" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
