--- a/src/PossumLabs.Specflow.Slipka/PossumLabs.Specflow.Slipka.csproj
+++ b/src/PossumLabs.Specflow.Slipka/PossumLabs.Specflow.Slipka.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.3.0" />
+    <PackageReference Include="GraphQL.Client" Version="1.0.3" />
     <PackageReference Include="RestSharp" Version="106.2.2" />
   </ItemGroup>
 
