--- a/src/PossumLabs.Specflow.Slipka/PossumLabs.Specflow.Slipka.csproj
+++ b/src/PossumLabs.Specflow.Slipka/PossumLabs.Specflow.Slipka.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="RestSharp" Version="106.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PossumLabs.Specflow.Core\PossumLabs.Specflow.Core.csproj" />
+  </ItemGroup>
+
 </Project>
