--- a/src/Slipka/appsettings.json
+++ b/src/Slipka/appsettings.json
@@ -5,7 +5,11 @@
   },
   "ProxySettings": {
     "FirstPort": 61710,
-    "LastPort": 61920
+    "LastPort": 61920,
+    "DefaultOpenFor": "01:00:00",
+    "MaxOpenFor": "2:00:00:00",
+    "DefaultRetainedFor": "31:00:00:00",
+    "MaxRetainedFor": "90:00:00:00"
   },
   "Logging": {
     "IncludeScopes": false,
