basic UI testcases

--- a/src/Slipka/appsettings.json
+++ b/src/Slipka/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "MongoSettings": {
     "ConnectionString": "mongodb://db",
-    "Database": "SlipkaDb"
+    "Database": "SlipkaDb",
+    "ChunkSizeBytes": 1048576
   },
   "ProxySettings": {
     "FirstPort": 61710,
@@ -9,7 +10,9 @@
     "DefaultOpenFor": "01:00:00",
     "MaxOpenFor": "2:00:00:00",
     "DefaultRetainedFor": "31:00:00:00",
-    "MaxRetainedFor": "90:00:00:00"
+    "MaxRetainedFor": "90:00:00:00",
+    "GridFsCleanupLoop": 50000,
+    "ProxyPersistanceLoop": 5000
   },
   "Logging": {
     "IncludeScopes": false,
