--- a/LegacyTest/LegacyTest.csproj
+++ b/LegacyTest/LegacyTest.csproj
@@ -62,6 +62,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\src\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -74,6 +75,12 @@
     </Reference>
     <Reference Include="TechTalk.SpecRun.Common, Version=1.7.2.0, Culture=neutral, PublicKeyToken=d0fc5cc18b3b389b, processorArchitecture=MSIL">
       <HintPath>..\src\packages\SpecRun.SpecFlow.2-3-0.1.7.2\lib\net45\TechTalk.SpecRun.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver, Version=3.13.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\src\packages\Selenium.WebDriver.3.13.1\lib\net45\WebDriver.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver.Support, Version=3.13.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\src\packages\Selenium.Support.3.13.1\lib\net45\WebDriver.Support.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -102,6 +109,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Features\Homepage.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Homepage.feature</DependentUpon>
+    </Compile>
     <Compile Include="Features\Injection.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -120,6 +132,11 @@
     <Compile Include="Framework\ErrorSteps.cs" />
     <Compile Include="Framework\ValidationSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Selenium\DriverSteps.cs" />
+    <Compile Include="Selenium\FrameworkInitializationSteps.cs" />
+    <Compile Include="Selenium\ValidationSteps.cs" />
+    <Compile Include="Selenium\WebDriverStepBase.cs" />
+    <Compile Include="Steps\SlipkaInjectionSteps.cs" />
     <Compile Include="Steps\HeaderSteps.cs" />
     <Compile Include="Steps\SessionSteps.cs" />
     <Compile Include="Steps\CallCollectionSteps.cs" />
@@ -147,6 +164,7 @@
     <Compile Include="Framework\FileSteps.cs" />
     <Compile Include="Steps\SlipkaSteps.cs" />
     <Compile Include="Steps\WaitSteps.cs" />
+    <Compile Include="Steps\WebsiteNavigationSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -172,6 +190,10 @@
     <None Include="Features\AttributeUsage.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>AttributeUsage.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\Homepage.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Homepage.feature.cs</LastGenOutput>
     </None>
     <None Include="Features\Injection.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
