--- a/LegacyTest/packages.config
+++ b/LegacyTest/packages.config
@@ -7,6 +7,8 @@
   <package id="MSTest.TestFramework" version="1.3.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="RestSharp" version="106.3.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.13.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.13.1" targetFramework="net461" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net461" />
   <package id="SpecFlow.MsTest" version="2.3.2" targetFramework="net461" />
   <package id="SpecRun.Runner" version="1.7.2" targetFramework="net461" />
