--- a/src/PossumLabs.Specflow.Selenium/PossumLabs.Specflow.Selenium.csproj
+++ b/src/PossumLabs.Specflow.Selenium/PossumLabs.Specflow.Selenium.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Selenium.WebDriver" Version="3.12.1" />
+    <PackageReference Include="Selenium.Support" Version="3.13.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.13.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PossumLabs.Specflow.Core\PossumLabs.Specflow.Core.csproj" />
   </ItemGroup>
 
 </Project>
