--- a/src/Slipka/Slipka.csproj
+++ b/src/Slipka/Slipka.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Slipka\src\app\MongoSettings.ts" />
+    <None Remove="Slipka\src\app\proxySettings.ts" />
+    <None Remove="Slipka\src\app\StateElement.ts" />
+    <None Remove="Slipka\src\app\Status.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -26,6 +33,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.AspNetCore.Proxy\Microsoft.AspNetCore.Proxy.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="Slipka\src\app\stateElement.ts" />
+    <TypeScriptCompile Include="Slipka\src\app\mongoSettings.ts" />
+    <TypeScriptCompile Include="Slipka\src\app\status.ts" />
+    <TypeScriptCompile Include="Slipka\src\app\proxySettings.ts" />
   </ItemGroup>
 
 </Project>
