--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -36,3 +36,6 @@ services:
       HUB_PORT_4444_TCP_ADDR: hub
       HUB_PORT_4444_TCP_PORT: 4444
       TZ: US/Mountain
+    deploy:
+      mode: replicated
+      replicas: 6
