--- a/src/Slipka/appsettings.json
+++ b/src/Slipka/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "MongoSettings": {
-    "ConnectionString": "mongodb://localhost",
+    "ConnectionString": "mongodb://db/",
     "Database": "SlipkaDb",
     "ChunkSizeBytes": 1048576
   },
