--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,4 @@ steps:
     docker login -u $(dockerId) -p $(pswd)
     docker push $(dockerId)/$(imageName)
   env:
-    pswd: $(dockerPassword)        # Define dockerPassword in the Variables tab of this pipeline in Pipelines page of web interface
+    pswd: $(dockerPassword)
