--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,13 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 variables:
-  dockerId: 'bashamer'
-  imageName: 'slipka'  
+  dockerId: bashamer
+  imageName: slipka
 
 steps:
 - script: |
     docker build -t $(dockerId)/$(imageName) .
-    docker login -u $(dockerId) -p $env:pswd
+    docker login -u $(dockerId) -p $(pswd)
     docker push $(dockerId)/$(imageName)
   env:
-    pswd: '$(dockerPassword)'
+    pswd: $(dockerPassword)
