updated the tests to DSL using DSL English

--- a/Slipka.Test/App.config
+++ b/Slipka.Test/App.config
@@ -6,9 +6,9 @@
   <specFlow>
     <unitTestProvider name="xUnit" />
     <stepAssemblies>
-      <stepAssembly assembly="PossumLabs.Specflow.Core" />
-      <stepAssembly assembly="PossumLabs.Specflow.Selenium" />
-      <stepAssembly assembly="PossumLabs.Specflow.Slipka" />
+      <stepAssembly assembly="PossumLabs.DSL.Core" />
+      <stepAssembly assembly="PossumLabs.DSL.Web" />
+      <stepAssembly assembly="PossumLabs.DSL.Slipka" />
     </stepAssemblies>
   </specFlow>
 </configuration>
