--- a/Slipka.Test/Slipka.Test.csproj
+++ b/Slipka.Test/Slipka.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -10,20 +10,12 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
-    <PackageReference Include="PossumLabs.Specflow.Core" Version="1.0.0-CI00026" />
-    <PackageReference Include="PossumLabs.Specflow.Selenium" Version="1.0.0-CI00032" />
+    <PackageReference Include="PossumLabs.DSL.English" Version="1.1.0" />
+    <PackageReference Include="PossumLabs.DSL.Slipka" Version="1.1.0" />
     <PackageReference Include="RestSharp" Version="106.6.10" />
-    <PackageReference Include="Selenium.Chrome.WebDriver" Version="76.0.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
-    <PackageReference Include="SpecFlow" Version="3.0.225" />
-    <PackageReference Include="SpecFlow.MsTest" Version="3.0.225" />
-    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.0.225" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.6.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\src\PossumLabs.Specflow.Slipka\PossumLabs.Specflow.Slipka.csproj" />
-    <ProjectReference Include="..\src\Slipka\Slipka.csproj" />
+    <PackageReference Include="SpecFlow" Version="3.1.82" />
+    <PackageReference Include="SpecFlow.MsTest" Version="3.1.82" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.1.82" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,12 +29,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Injection.feature</DependentUpon>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
